--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,7 +1,11 @@
 <div class="overlayDivLoader" *ngIf="spinner">
-<div class="newloader">
-<div class="loader" [ngStyle]="{'border-top': '16px solid '+ item.borderColor}"></div>
-<span class="loaderText">{{item.message}}...</span>
-</div>
-
+  <div class="newloader">
+    <div class="loaderInner">
+      <div
+        class="loader"
+        [ngStyle]="{ 'border-top': '16px solid ' + item.borderColor }"
+      ></div>
+      <span class="loaderText">{{ item.message }}...</span>
+    </div>
+  </div>
 </div>
