--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <div class="mcw">
   <div class="cv">
     <div class="container">
-      <div class="float-right">User Login Time:{{ loginTime }}</div>
+      <div class="float-right"><h3>User Login Time:</h3><span>{{ loginTime }}</span></div>
     </div>
   </div>
 </div>
