--- a/src/app/spinner/spinner.component.css
+++ b/src/app/spinner/spinner.component.css
@@ -5,6 +5,7 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+  margin: auto;
 }
 
 @keyframes spin {
@@ -21,14 +22,11 @@
 
 }
 .newloader {
-  width: 100px;
-	height: 100px;
-	position: absolute;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-  margin: auto;
-  font-size: 30px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
+.loaderText {
+  font-size: 25px;
+}
